--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@
 
 
 
-/* Media queries para pantallas más pequeñas (teléfonos) */
+/* Media queries para pantallas más grande (notebook) */
 @media (min-width: 480px) {
 
 
